# flask-graphene-subscription-test

./: mypy.ini  pyproject.toml
subscription_test/: __init__.py  app.py  graphql.py
subscription_test/schema/: schema.py  users.py
