[tool.poetry]
name = "flask-graphene-subscription-test"
version = "0.1.0"
description = ""
authors = ["Riley Flynn <riley@rileyflynn.me>"]
license = "MIT"
packages = [
    { include = "subscription_test" }
]

[tool.poetry.dependencies]
python = "^3.9"

Flask = "^2.0.1"
Flask-GraphQL = "^2.0.1"
graphene = "^2.1.9"

gunicorn = {version = "^20.1.0", optional = true, extras = ["gevent"]}
gevent = {version = "^20.9.0, <20.12.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.2"
flake8 = "^3.9.2"
mypy = "^0.910"

[tool.poetry.extras]
gunicorn = [
    "gunicorn",
    "gevent",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
